--- a/Page-1.html
+++ b/Page-1.html
@@ -42,6 +42,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="About-TED.html">About TED</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-custom-color-2 u-text-hover-custom-color-1" href="Team.html">The Team</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -49,6 +50,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-TED.html">About TED</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Team.html">The Team</a>
 </li></ul>
               </div>
             </div>
